[tool.poetry]
name = "podcast"
version = "0.1.0"
description = "Using podcast to explore git integration in PyCharm"
authors = ["Andrew1806 <40208050+Andrew1806@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
